# lexical_syntax_analyzer

./: .ocamlformat  README.md  dune-project
lib/: dune  eval.ml  lexer.mll  parser.mly  syntax.ml
test/: dune
